--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -8,7 +8,7 @@
 }
 .nav_img{
     width: 100px;
-    height: 70px;
+    height: 50px;
     z-index: 10;
     position:fixed;
 }
@@ -22,4 +22,49 @@
     margin: 10px;
     width: 30px;
     height: 30px;
+}
+
+.nav_dropdown{
+    display: flex;
+    flex-direction: row;
+
+   
+   
+}
+.drop_down{
+    position:absolute;
+    right: 2px;
+    top: 44px;
+    z-index: 100;
+    height: 120px;
+    width: 150px;
+    background-color:black;
+    border-radius: 10px;
+   display: none;
+    transition:transform 0.5s ease-out;
+}
+.nav_dropdown:hover  .drop_down{
+ display: block;
+}
+.drop_down:hover  .drop_down{
+ display: block;
+}
+.drop_item{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+}
+.drop_item a{
+    text-decoration: none;
+    color: white;
+}
+.drop_item button{
+    text-decoration: none;
+    background-color: black;
+    padding: 10px;
+    color: white;
 }
